Test multitech - premiere version fonctionelle

--- a/app/src/main/res/layout/activity_diebold__call__in.xml
+++ b/app/src/main/res/layout/activity_diebold__call__in.xml
@@ -226,11 +226,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="Module"
-            app:layout_constraintBaseline_toBaselineOf="@+id/nomModule"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textResume"
             app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
-            android:id="@+id/nomModule"
+            android:id="@+id/textResume"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
@@ -253,7 +253,7 @@
             android:layout_marginTop="16dp"
             android:text="Travail"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nomModule" />
+            app:layout_constraintTop_toBottomOf="@+id/textResume" />
 
         <EditText
             android:id="@+id/textTravail"
@@ -268,10 +268,10 @@
             android:inputType="textMultiLine"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView11"
-            app:layout_constraintTop_toBottomOf="@+id/nomModule" />
+            app:layout_constraintTop_toBottomOf="@+id/textResume" />
 
         <Spinner
-            android:id="@+id/spinner3"
+            android:id="@+id/spinFermeture"
             android:layout_width="0dp"
             android:layout_height="27dp"
             android:layout_marginEnd="16dp"
@@ -298,7 +298,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinner3" />
+            app:layout_constraintTop_toBottomOf="@+id/spinFermeture" />
 
         <TextView
             android:id="@+id/textView13"
