--- a/app/src/main/res/layout/activity_multitech_piece.xml
+++ b/app/src/main/res/layout/activity_multitech_piece.xml
@@ -88,7 +88,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:hint="# Marchand"
+        android:hint="# Marchand et Séquence"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textSerie"
