--- a/app/src/main/res/layout/activity_multitech__call__in.xml
+++ b/app/src/main/res/layout/activity_multitech__call__in.xml
@@ -250,7 +250,7 @@
             android:layout_marginTop="24dp"
             android:background="@drawable/shape"
             android:ems="10"
-            android:hint="Résumé (changer ICT250)"
+            android:hint="Résumé (changer IPP320_V2 T340)"
             android:inputType="textPersonName"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
